--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 AZURE_OPENAI_ENDPOINT='<add your endpoint here>'
 AZURE_OPENAI_DEPLOYMENT='<add your deployment name here>' 
-AZURE_OPENAI_KEY='<add your key here>'
+AZURE_OPENAI_KEY='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'
 AZURE_OPENAI_EMBEDDINGS_DEPLOYMENT='<add your deployment name here>'
